force-app/main/default/objects/Reminder_Stream__mdt/Reminder_Stream__mdt.object-meta.xml
<CustomObject>
    <description>Sprint 2 | Reminder Stream Configurations</description>
    <label>Reminder Stream</label>
    <pluralLabel>Reminder Streams</pluralLabel>
</CustomObject>