force-app/main/default/objects/Reminder_Stream__mdt/fields/Agent_Notification_Delay__c.field-meta.xml
<CustomField>
    <fullName>Agent_Notification_Delay__c</fullName>
    <label>Agent Notification Delay</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>