force-app/main/default/objects/Reminder_Stream__mdt/fields/Agent_Notification_Template__c.field-meta.xml
<CustomField>
    <fullName>Agent_Notification_Template__c</fullName>
    <label>Agent Notification Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>