force-app/main/default/objects/Reminder_Stream__mdt/fields/Allow_Waiting_on_3rd_Person_Reminders__c.field-meta.xml
<CustomField>
    <fullName>Allow_Waiting_on_3rd_Person_Reminders__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Waiting on 3rd Person Reminders</label>
    <type>Checkbox</type>
</CustomField>