force-app/main/default/objects/Reminder_Stream__mdt/fields/Auto_Close__c.field-meta.xml
<CustomField>
    <fullName>Auto_Close__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Close</label>
    <type>Checkbox</type>
</CustomField>