force-app/main/default/objects/Reminder_Stream__mdt/fields/Auto_Close_Email_Template__c.field-meta.xml
<CustomField>
    <fullName>Auto_Close_Email_Template__c</fullName>
    <label>Auto Close Email Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>