force-app/main/default/objects/Reminder_Stream__mdt/fields/Business_Hour_Name__c.field-meta.xml
<CustomField>
    <fullName>Business_Hour_Name__c</fullName>
    <label>Business Hour</label>
    <length>255</length>
    <type>Text</type>
</CustomField>