force-app/main/default/objects/Reminder_Stream__mdt/fields/Close_After_Last_Reminder__c.field-meta.xml
<CustomField>
    <fullName>Close_After_Last_Reminder__c</fullName>
    <label>Close After Last Reminder</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>