force-app/main/default/objects/Reminder_Stream__mdt/fields/Notify_Agent__c.field-meta.xml
<CustomField>
    <fullName>Notify_Agent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notify Agent</label>
    <type>Checkbox</type>
</CustomField>