force-app/main/default/objects/Reminder_Stream__mdt/fields/Queue_to_Reassign__c.field-meta.xml
<CustomField>
    <fullName>Queue_to_Reassign__c</fullName>
    <label>Queue to Reassign</label>
    <length>255</length>
    <type>Text</type>
</CustomField>