force-app/main/default/objects/Reminder_Stream__mdt/fields/Reminder_Email_Templates__c.field-meta.xml
<CustomField>
    <fullName>Reminder_Email_Templates__c</fullName>
    <label>Reminder Email Templates</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>