force-app/main/default/objects/Reminder_Stream__mdt/fields/Reminder_Intervals__c.field-meta.xml
<CustomField>
    <fullName>Reminder_Intervals__c</fullName>
    <label>Reminder Intervals</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>