force-app/main/default/objects/Reminder_Stream__mdt/fields/Service_Line__c.field-meta.xml
<CustomField>
    <fullName>Service_Line__c</fullName>
    <label>Service Line</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>