force-app/main/default/objects/Reminder_Stream__mdt/fields/Source_Emails__c.field-meta.xml
<CustomField>
    <fullName>Source_Emails__c</fullName>
    <label>Source Emails</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>