force-app/main/default/objects/Reminder_Stream__mdt/fields/Use_Business_Hours__c.field-meta.xml
<CustomField>
    <fullName>Use_Business_Hours__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Business Hours</label>
    <type>Checkbox</type>
</CustomField>