force-app/main/default/objects/Reminder_Stream__mdt/fields/Waiting_on_3rd_Person_Email_Template__c.field-meta.xml
<CustomField>
    <fullName>Waiting_on_3rd_Person_Email_Template__c</fullName>
    <label>Waiting on 3rd Person Email Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>