force-app/main/default/objects/Reminder_Stream__mdt/fields/Waiting_on_3rd_Person_Interval__c.field-meta.xml
<CustomField>
    <fullName>Waiting_on_3rd_Person_Interval__c</fullName>
    <label>Waiting on 3rd Person Interval</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>